[gd_scene load_steps=4 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://wrong.wav" type="AudioStream" id=2]
[ext_resource path="res://right.wav" type="AudioStream" id=3]

[node name="Board" type="Node2D"]
script = ExtResource( 1 )

[node name="StartPosition" type="Position2D" parent="."]

[node name="ResultTimer" type="Timer" parent="."]
one_shot = true

[node name="RightChoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="WrongChoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="timeout" from="ResultTimer" to="." method="_on_showing_result_ended"]
